[tool.poetry]
name = "http-client"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"
packages = [{include = "http_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
